# rk2

./: CMakeLists.txt  CompositePattern.cpp  classes.cpp  classes.h  component.h  composite.cpp  composite.h  composite_test.cpp  leaf.cpp  leaf.h  main.cpp
.github/workflows/: build.yml
